Sockets now close after quit command issued.
Points "To Be Awarded" now show after correct guess.

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </dependencies>
 
     <build>
-        <finalName>maven-unit-test</finalName>
+        <finalName>quiztastic</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -35,6 +35,21 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>libs/</classpathPrefix>
+                            <mainClass>
+                                quiztastic.entries.Server
+                            </mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
