--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,14 @@
             <version>5.7.0-RC1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.cedarsoftware/java-util -->
+        <dependency>
+            <groupId>com.cedarsoftware</groupId>
+            <artifactId>java-util</artifactId>
+            <version>1.61.0</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <finalName>quiztastic</finalName>
